# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos/native_stub/native_stub.gni")

config("egl_configs") {
  include_dirs = [ "//third_party/EGL/api" ]
  defines = [
    "ENABLE_EGL",
    "OHOS_PLATFORM",
  ]
}

ohos_native_stub_library("libEGL_stub") {
  output_name = "EGL"
  output_extension = "so"
  public_configs = [ ":egl_configs" ]
  stub_description_file = "./libEGL.stub.json"
}
