# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_out_path = "graphic_standard/surface"

group("systemtest") {
  testonly = true

  deps = [
    ":native_window_buffer_test",
    ":surface_ipc_test",
  ]
}

## SystemTest native_window_buffer_test {{{
ohos_systemtest("native_window_buffer_test") {
  module_out_path = module_out_path

  sources = [ "native_window_buffer_test.cpp" ]

  include_dirs = [
    "//foundation/graphic/standard/frameworks/surface/include",
    "//drivers/peripheral/display/interfaces/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/graphic/standard:libsurface",
    "//foundation/graphic/standard/utils:libgraphic_utils",
    "//third_party/googletest:gtest_main",
  ]
}

## SystemTest native_window_buffer_test }}}

## SystemTest surface_ipc_test {{{
ohos_systemtest("surface_ipc_test") {
  module_out_path = module_out_path

  sources = [ "surface_ipc_test.cpp" ]

  include_dirs = [
    "//foundation/graphic/standard/frameworks/surface/include",
    "//drivers/peripheral/display/interfaces/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]

  deps = [
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/graphic/standard:libsurface",
    "//third_party/googletest:gtest_main",
  ]
}
## SystemTest surface_ipc_test }}}
