# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/standard/utils/lex_yacc/lex_yacc.gni")

## Build libwmlayout_scss_parser.so {{{
lex_yacc("libwmlayout_scss_parser_parser") {
  lex = "lexer.l"
  yacc = "parser.y"
}

config("libwmlayout_scss_parser_config") {
  visibility = [ ":*" ]

  include_dirs = []

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("libwmlayout_scss_parser_public_config") {
  include_dirs = []
}

ohos_static_library("libwmlayout_scss_parser") {
  sources = [
    "driver.cpp",
    "scanner.cpp",
  ]

  configs = [ ":libwmlayout_scss_parser_config" ]

  public_configs = [ ":libwmlayout_scss_parser_public_config" ]

  public_deps = [ ":libwmlayout_scss_parser_parser" ]
}

## Build libwmlayout_scss_parser.so }}}

## Build wmlayout_scss_parser {{{
ohos_executable("wmlayout_scss_parser") {
  install_enable = false

  sources = [ "main.cpp" ]

  deps = [ ":libwmlayout_scss_parser" ]

  subsystem_name = "graphic"
  part_name = "graphic_standard"
}
## Build wmlayout_scss_parser }}}
