# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/standard/utils/lex_yacc/lex_yacc.gni")

## Build wmlayout_scss_parser {{{
lex_yacc("wmlayout_scss_parser_parser") {
  lex = "lexer.l"
  yacc = "parser.y"
}

config("wmlayout_scss_parser_config") {
  visibility = [ ":*" ]

  include_dirs =
      [ "//foundation/graphic/standard/interfaces/inner_api/wmclient" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

ohos_executable("wmlayout_scss_parser") {
  install_enable = false

  sources = [
    "driver.cpp",
    "main.cpp",
    "scanner.cpp",
  ]

  configs = [ ":wmlayout_scss_parser_config" ]

  deps = [
    ":wmlayout_scss_parser_parser",
    "../..:layout_header",
  ]

  subsystem_name = "graphic"
  part_name = "graphic_standard"
}
## Build wmlayout_scss_parser }}}
